Big update, fix to commit issues, support for trigram data dump

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Logs and databases #
+#####################
+*.log
+*.sql
+*.sqlite
+
+# python compiled files #
+*.pyc
+
+# scraped data (dota-nn) #
+*.csv
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
